Commiting the change from new branch

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Adding some title</title>
+	<title>Makeing some change here/title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
