making some changes in master html

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Makeing some change here/title>
+	<title>This are the changes that I am making in MASTER branch </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
