adding the changes in master

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>This is what I have in REALWORK branch</title>
+	<title>This is what I have in Master branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
