Adding changes to branch

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Changing the title for the stash example</title>
+	<title>Changing the title for the stash example adding some random title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
